syntax = "proto3";

package skysign_proto;

import "google/api/annotations.proto";
import "proto/common.proto";

option java_package = "proto.skysign";
option java_multiple_files = true;
option go_package = ".;skysign_proto";

service ManageMissionService {
    rpc ListMissions (Empty) returns (ListMissionsResponses) {
        option (google.api.http) = {
            get: "/api/v1/missions"
        };
    };

    rpc GetMission (GetMissionRequest) returns (Mission) {
        option (google.api.http) = {
            get: "/api/v1/missions/{id}"
        };
    };

    rpc CreateMission (Mission) returns (Mission) {
        option (google.api.http) = {
            post: "/api/v1/missions"
            body: "*"
        };
    };

    rpc UpdateMission (Mission) returns (Mission) {
        option (google.api.http) = {
            put: "/api/v1/missions/{id}"
            body: "*"
        };
    };

    rpc DeleteMission (DeleteMissionRequest) returns (Empty) {
        option (google.api.http) = {
            delete: "/api/v1/missions/{id}"
        };
    };
}

message GetMissionRequest {
    string id = 1;
}

message DeleteMissionRequest {
    string id = 1;
}

message ListMissionsResponses {
    repeated Mission missions = 1;
}